Adjust spacing for buttons again to ensure they're visible

--- a/styles.css
+++ b/styles.css
@@ -2255,7 +2255,7 @@ text-decoration: underline;
     }
 
     .c-plants__buttons {
-        margin-top: 53rem;
+        margin-top: 56.5rem;
     }
 
     /* Supplies, Services & Plant Care */
